# UluCore

./: .gitignore  ANALIZ.md  ANALIZ_RAPORU.md  CHECKLIST.md  README.md  ROADMAP.md  docker-compose.yml
.ai-ulu/: config.json  memory.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: aws.yml
.openhands/microagents/: product_ready.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: script.py.mako
backend/alembic/versions/: 673bf7eb5e07_create_events_table.py  739eead066af_create_policies_table.py
backend/app/: config.py  main.py
backend/app/adapters/: __init__.py  base_db.py  db_postgres.py  memory_db.py  supabase_db.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  action.py  api_keys.py  auth.py  billing.py  events.py  metrics.py  policies.py  simulate.py
backend/app/auth/: __init__.py  api_key.py  jwt.py
backend/app/core/: __init__.py  ai_advisor.py  engine.py  policies.py
backend/app/domain/: event.py
backend/app/models/: __init__.py  schemas.py
backend/tests/: test_idempotency.py
frontend/: .env.production  Dockerfile  eslint.config.js  package-lock.json
frontend/src/: App.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/pages/: Dashboard.tsx  Home.tsx  Login.tsx  Pricing.tsx  index.ts
frontend/srcsrc/lib/: api.ts  auth.ts
marketing/outputs/: godfather_update_20260204_1128.md
