[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.127.0"}
psycopg2-binary = "^2.9.9"
pyjwt = "^2.10.1"
python-dotenv = "^1.2.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
httpx = "^0.28.1"
supabase = "^2.27.0"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
